rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__with_filters__filter_and_dimension.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/with_filters.rs
expression: result
---
orders__category | orders__created_at_day | orders__rolling_sum_trailing_7d
-----------------+------------------------+--------------------------------
books            | 2024-01-12 00:00:00    | 30.00                          
books            | 2024-01-16 00:00:00    | 90.00                          
books            | 2024-01-21 00:00:00    | 60.00                          
books            | 2024-01-18 00:00:00    | 60.00                          
books            | 2024-01-17 00:00:00    | 60.00                          
books            | 2024-01-20 00:00:00    | 60.00                          
books            | 2024-01-10 00:00:00    | 30.00                          
books            | 2024-01-11 00:00:00    | 30.00                          
books            | 2024-01-14 00:00:00    | 30.00                          
books            | 2024-01-13 00:00:00    | 30.00                          
books            | 2024-01-19 00:00:00    | 60.00                          
books            | 2024-01-15 00:00:00    | 90.00                          
clothing         | 2024-01-04 00:00:00    | 75.00                          
clothing         | 2024-01-10 00:00:00    | 75.00                          
clothing         | 2024-01-09 00:00:00    | 75.00                          
clothing         | 2024-01-20 00:00:00    | 180.00                         
clothing         | 2024-01-07 00:00:00    | 75.00                          
clothing         | 2024-01-08 00:00:00    | 75.00                          
clothing         | 2024-01-05 00:00:00    | 75.00                          
clothing         | 2024-01-22 00:00:00    | 180.00                         
clothing         | 2024-01-19 00:00:00    | 180.00                         
clothing         | 2024-01-23 00:00:00    | 180.00                         
clothing         | 2024-01-21 00:00:00    | 180.00                         
clothing         | 2024-01-18 00:00:00    | 180.00                         
clothing         | 2024-01-06 00:00:00    | 75.00                          
clothing         | 2024-01-24 00:00:00    | 180.00                         
electronics      | 2024-01-05 00:00:00    | 150.00                         
electronics      | 2024-01-03 00:00:00    | 150.00                         
electronics      | 2024-01-31 00:00:00    | 250.00                         
electronics      | 2024-01-15 00:00:00    | 350.00                         
electronics      | 2024-01-13 00:00:00    | 350.00                         
electronics      | 2024-01-29 00:00:00    | 250.00                         
electronics      | 2024-01-30 00:00:00    | 250.00                         
electronics      | 2024-01-02 00:00:00    | 150.00                         
electronics      | 2024-01-17 00:00:00    | 350.00                         
electronics      | 2024-01-08 00:00:00    | 150.00                         
electronics      | 2024-01-25 00:00:00    | 250.00                         
electronics      | 2024-01-07 00:00:00    | 150.00                         
electronics      | 2024-01-16 00:00:00    | 350.00                         
electronics      | 2024-01-12 00:00:00    | 350.00                         
electronics      | 2024-01-06 00:00:00    | 150.00                         
electronics      | 2024-01-04 00:00:00    | 150.00                         
electronics      | 2024-01-18 00:00:00    | 350.00                         
electronics      | 2024-01-14 00:00:00    | 350.00                         
electronics      | 2024-01-27 00:00:00    | 250.00                         
electronics      | 2024-01-28 00:00:00    | 250.00                         
electronics      | 2024-01-26 00:00:00    | 250.00                         
NULL             | 2024-02-01 00:00:00    | NULL                           
NULL             | 2024-01-01 00:00:00    | NULL
